--- a/api/analysis.ipynb
+++ b/api/analysis.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "id": "c02431e6-7d41-4eb1-af98-9468551b50cc",
    "metadata": {
     "tags": []
@@ -22,13 +22,13 @@
    "outputs": [],
    "source": [
     "value_filter = \"all\"\n",
-    "number_filter = 3\n",
+    "number_filter = 0\n",
     "subtype = \"all\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 20,
    "id": "3f6f47a3-c039-4925-aa3d-02e82080b0fd",
    "metadata": {
     "tags": []
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "id": "02509239-85dd-4e50-af0e-6ec2ba765834",
    "metadata": {
     "tags": []
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "id": "7b19daed-5094-4965-878a-fc3fbed2967e",
    "metadata": {
     "tags": []
@@ -252,13 +252,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 23,
+   "id": "3ccf3ca0-60b6-47ce-808f-fe0f1f97e2fe",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "def bag_of_word(list_of_words):\n",
+    "    vectorizer = CountVectorizer()\n",
+    "    bag_of_words = vectorizer.fit_transform(list_of_words)\n",
+    "    feature_names = vectorizer.get_feature_names_out()\n",
+    "    word_frequencies = bag_of_words.toarray().sum(axis=0)\n",
+    "    sorted_word_frequencies = dict(zip(feature_names, word_frequencies))\n",
+    "    sorted_word_frequencies = sorted(sorted_word_frequencies.items(), key=lambda x: x[1], reverse=True)[:100]\n",
+    "    result = []\n",
+    "    for word in sorted_word_frequencies:\n",
+    "        item = {\"text\":word[0],  \"value\":int(word[1])}\n",
+    "        result.append(item)\n",
+    "    return result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "e2ddf320-13a6-4505-ba0b-b68761078547",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "from sklearn.feature_extraction.text import CountVectorizer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
    "id": "0339f460-0e1f-46eb-a6bf-bb05e56a4524",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
+    "colors = [\"#F06292\", \"#4FC3F7\", \"#AED581\", \"#FF8A65\", \"#BA68C8\", \"#4DB6AC\", \"#FFF176\", \"#CE93D8\", \"#7986CB\", \"#E57373\"]\n",
+    "value_filter = value_filter.lower()\n",
+    "number_filter = int(number_filter)\n",
+    "subtype = subtype.lower()\n",
     "if subtype == \"all\":\n",
     "    train = pd.read_csv(\"train.csv\")\n",
     "    val = pd.read_csv(\"val.csv\")\n",
@@ -295,72 +334,151 @@
     "    for value in values_list:\n",
     "        item[\"name\"] = number_worker_keys[number_worker]\n",
     "        count = len(data[data[value]>=number_worker])\n",
-    "        item[value] = int(count)\n",
+    "        item[value] = int(count/3)\n",
     "    cumulative_results.append(item)\n",
+    "\n",
+    "topic_count = data[\"topic\"].value_counts()\n",
+    "topic_count = topic_count.reset_index()\n",
+    "topic_count.columns = [\"name\", \"value\"]\n",
+    "topic_count[\"percent\"] = round(topic_count[\"value\"]/topic_count[\"value\"].sum()*100)\n",
+    "topic_count = topic_count.to_dict('records')\n",
+    "for i in range(len(topic_count)):\n",
+    "    try:\n",
+    "        topic_count[i][\"fill\"] = colors[i]\n",
+    "    except:\n",
+    "        topic_count[i][\"fill\"] = \"black\"\n",
     "\n",
     "answer_list = data[\"answer\"].value_counts()\n",
     "answer_list = answer_list.reset_index()\n",
     "answer_list.columns = [\"name\", \"value\"]\n",
-    "answer_list = answer_list[:30] \n",
+    "answer_list = answer_list[:50] \n",
+    "answer_list[\"percent\"] = round(answer_list[\"value\"]/answer_list[\"value\"].sum()*100, 2)\n",
     "answer_list = answer_list.to_dict(\"records\")\n",
-    "\n",
     "\n",
     "nest_data = data.groupby(['firstword', 'secondword', 'thirdword', 'fourword'])['fifword'].value_counts()\n",
     "result = nest_pie_data(nest_data)\n",
     "result = add_color(result)\n",
     "\n",
+    "first_word = data[\"firstword\"].value_counts()\n",
+    "first_word = first_word.reset_index()\n",
+    "first_word.columns = [\"name\", \"value\"]\n",
+    "first_word[\"percent\"] = round(first_word[\"value\"]/len(data)*100, 2)\n",
     "\n",
-    "first_word = data[\"firstword\"].value_counts()\n",
-    "first_word = first_word.reset_index()\n",
-    "first_word.columns = [\"name\", \"value\"]\n",
-    "first_word[\"percent\"] = round(first_word[\"value\"]/len(data)*100, 2)\n"
+    "qa_result = stack_bar_chart(data, 'firstword', \"answer\")\n",
+    "QAkeys = list(qa_result[0].keys())\n",
+    "QAkeys.remove(\"name\")\n",
+    "\n",
+    "qt_result = stack_bar_chart(data, 'firstword', \"topic\")\n",
+    "QTkeys = list(qt_result[0].keys())\n",
+    "QTkeys.remove(\"name\")\n",
+    "\n",
+    "answer_type = data[\"answer_type\"].value_counts()\n",
+    "answer_type = answer_type.reset_index()\n",
+    "answer_type.columns = [\"name\", \"value\"]\n",
+    "answer_type[\"percent\"] = round(answer_type[\"value\"]/len(data)*100, 2)\n",
+    "answer_type = answer_type.to_dict(\"records\")\n",
+    "for i in range(len(answer_type)):\n",
+    "    try:\n",
+    "        answer_type[i][\"fill\"] = colors[i]\n",
+    "    except:\n",
+    "        answer_type[i][\"fill\"] = \"black\"\n",
+    "\n",
+    "len_ques = data[\"len ques\"].value_counts()\n",
+    "len_ques = len_ques.reset_index()\n",
+    "len_ques.columns = [\"name\", \"value\"]\n",
+    "for i in range(len(len_ques.max())):\n",
+    "    if i not in list(len_ques[\"name\"]):\n",
+    "        new_row = pd.DataFrame({'name': [i],'value': [0]})\n",
+    "        len_ques = pd.concat([len_ques, new_row], ignore_index=True)\n",
+    "len_ques[\"percent\"] = round(len_ques[\"value\"]/len_ques[\"value\"].sum()*100, 2)\n",
+    "len_ques = len_ques.sort_values(\"name\")\n",
+    "len_ques = len_ques.to_dict(\"records\")\n",
+    "question_bag = bag_of_word(list(data['question']))\n",
+    "answer_bag = bag_of_word(list(data['answer']))\n",
+    "question_answer_bag = bag_of_word(list(data['question']) + list(data['answer']))\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "f855f534-6399-4fd4-9afd-da629c396209",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "nest_data = data.groupby(['firstword', 'secondword', 'thirdword', 'fourword'])['fifword'].value_counts()\n",
-    "result = nest_pie_data(nest_data)\n",
-    "result = add_color(result)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "87e6ff9c-4624-430d-9975-35c9d3a8b3b0",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "first_word = data[\"firstword\"].value_counts()\n",
-    "first_word = first_word.reset_index()\n",
-    "first_word.columns = [\"name\", \"value\"]\n",
-    "first_word[\"percent\"] = round(first_word[\"value\"]/len(data)*100, 2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 69,
    "id": "2822924d-69b9-4167-8103-3ee163c89a10",
    "metadata": {},
    "outputs": [],
    "source": [
-    "qa_result = stack_bar_chart(data, 'firstword', \"answer\")\n",
-    "QAkeys = list(qa_result[0].keys())\n",
-    "QAkeys.remove(\"name\")"
+    "worker_mapping = {\n",
+    "    0: \"0 worker\",\n",
+    "    1: \"1 worker\",\n",
+    "    2: \"2 workers\",\n",
+    "    3: \"3 workers\"\n",
+    "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 72,
    "id": "29e19264-f9e1-42ea-9285-a7c1527b04b9",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "category_workers = []\n",
+    "for category in categories:\n",
+    "    item = data[category].map(worker_mapping).value_counts().to_dict()\n",
+    "    item[\"name\"] = category\n",
+    "    category_workers.append(item)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "id": "0a912831-613c-4b69-aa89-bf7e764e692f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'0 worker': 59822,\n",
+       "  '1 worker': 16430,\n",
+       "  '2 workers': 9644,\n",
+       "  '3 workers': 5447,\n",
+       "  'name': 'incorrect'},\n",
+       " {'0 worker': 85924,\n",
+       "  '1 worker': 5199,\n",
+       "  '2 workers': 219,\n",
+       "  '3 workers': 1,\n",
+       "  'name': 'partially incorrect'},\n",
+       " {'0 worker': 73531,\n",
+       "  '1 worker': 15721,\n",
+       "  '2 workers': 1966,\n",
+       "  '3 workers': 125,\n",
+       "  'name': 'ambiguous'},\n",
+       " {'0 worker': 63626,\n",
+       "  '1 worker': 22905,\n",
+       "  '2 workers': 4388,\n",
+       "  '3 workers': 424,\n",
+       "  'name': 'partially correct'},\n",
+       " {'3 workers': 31371,\n",
+       "  '2 workers': 25229,\n",
+       "  '1 worker': 18762,\n",
+       "  '0 worker': 15981,\n",
+       "  'name': 'correct'}]"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "category_workers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "25200c3f-159e-4a02-810e-d3cf307d10f6",
    "metadata": {
     "tags": []
    },
@@ -369,18 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
-   "id": "0a912831-613c-4b69-aa89-bf7e764e692f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 41,
    "id": "dbbe52f2-2afa-4ae3-99f2-405d6c96f5c1",
    "metadata": {
     "tags": []
@@ -389,40 +496,21 @@
     {
      "data": {
       "text/plain": [
-       "[{'text': 'the', 'value': 36237},\n",
-       " {'text': 'is', 'value': 25171},\n",
-       " {'text': 'what', 'value': 21094},\n",
-       " {'text': 'are', 'value': 11769},\n",
-       " {'text': 'color', 'value': 11263},\n",
-       " {'text': 'there', 'value': 9644},\n",
-       " {'text': 'in', 'value': 8038},\n",
-       " {'text': 'man', 'value': 6462},\n",
-       " {'text': 'people', 'value': 6323},\n",
-       " {'text': 'many', 'value': 6322},\n",
-       " {'text': 'how', 'value': 6308},\n",
-       " {'text': 'on', 'value': 5140},\n",
-       " {'text': 'of', 'value': 4236},\n",
-       " {'text': 'person', 'value': 2783},\n",
-       " {'text': 'image', 'value': 2554},\n",
-       " {'text': 'doing', 'value': 2110},\n",
-       " {'text': 'holding', 'value': 1928},\n",
-       " {'text': 'shirt', 'value': 1923},\n",
-       " {'text': 'woman', 'value': 1897},\n",
-       " {'text': 'sitting', 'value': 1855}]"
+       "{'0 worker': 85924, '1 worker': 5199, '2 workers': 219, '3 workers': 1}"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "question_bag "
+    "data[\"partially incorrect\"].map(worker_mapping).value_counts().to_dict()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 42,
    "id": "44f4ec62-2bee-4ddb-a805-9fa315b3c8e8",
    "metadata": {
     "tags": []
@@ -431,92 +519,17 @@
     {
      "data": {
       "text/plain": [
-       "[{'text': 'the', 'value': 36237},\n",
-       " {'text': 'is', 'value': 25171},\n",
-       " {'text': 'what', 'value': 21094},\n",
-       " {'text': 'are', 'value': 11769},\n",
-       " {'text': 'color', 'value': 11263},\n",
-       " {'text': 'there', 'value': 9644},\n",
-       " {'text': 'in', 'value': 8038},\n",
-       " {'text': 'man', 'value': 6462},\n",
-       " {'text': 'people', 'value': 6323},\n",
-       " {'text': 'many', 'value': 6322},\n",
-       " {'text': 'how', 'value': 6308},\n",
-       " {'text': 'on', 'value': 5140},\n",
-       " {'text': 'of', 'value': 4236},\n",
-       " {'text': 'person', 'value': 2783},\n",
-       " {'text': 'image', 'value': 2554},\n",
-       " {'text': 'doing', 'value': 2110},\n",
-       " {'text': 'holding', 'value': 1928},\n",
-       " {'text': 'shirt', 'value': 1923},\n",
-       " {'text': 'woman', 'value': 1897},\n",
-       " {'text': 'sitting', 'value': 1855}]"
+       "{'0 worker': 59822, '1 worker': 16430, '2 workers': 9644, '3 workers': 5447}"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "result"
+    "data[\"incorrect\"].map(worker_mapping).value_counts().to_dict()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 110,
-   "id": "840b9af4-ec32-468d-9f82-5c618fed93ac",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{1, 2, 3, 4}\n",
-      "{1, 2, 3, 4, 5, 6}\n"
-     ]
-    }
-   ],
-   "source": [
-    "my_set = {1, 2, 3}\n",
-    "my_set.add(4)\n",
-    "print(my_set)  # Output: {1, 2, 3, 4}\n",
-    "\n",
-    "my_set.update([4,1, 5, 6])\n",
-    "print(my_set)  # Ou"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 115,
-   "id": "9297a135-c6d0-4369-9583-0ea152cb4797",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: scikit-learn in /home/ngoc/anaconda3/envs/py37/lib/python3.7/site-packages (1.0.2)\n",
-      "Requirement already satisfied: threadpoolctl>=2.0.0 in /home/ngoc/anaconda3/envs/py37/lib/python3.7/site-packages (from scikit-learn) (3.1.0)\n",
-      "Requirement already satisfied: numpy>=1.14.6 in /home/ngoc/anaconda3/envs/py37/lib/python3.7/site-packages (from scikit-learn) (1.21.6)\n",
-      "Requirement already satisfied: scipy>=1.1.0 in /home/ngoc/anaconda3/envs/py37/lib/python3.7/site-packages (from scikit-learn) (1.7.3)\n",
-      "Requirement already satisfied: joblib>=0.11 in /home/ngoc/anaconda3/envs/py37/lib/python3.7/site-packages (from scikit-learn) (1.3.1)\n"
-     ]
-    }
-   ],
-   "source": [
-    "!pip install scikit-learn"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f7b52cef-539f-4acb-8d77-80c53b38c1ba",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
