--- a/api/analysis.ipynb
+++ b/api/analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "id": "a3e4335d-86ea-4aaa-aac5-458c5dbd53bd",
    "metadata": {
     "tags": []
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "id": "c02431e6-7d41-4eb1-af98-9468551b50cc",
    "metadata": {
     "tags": []
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "id": "3f6f47a3-c039-4925-aa3d-02e82080b0fd",
    "metadata": {
     "tags": []
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 14,
    "id": "02509239-85dd-4e50-af0e-6ec2ba765834",
    "metadata": {
     "tags": []
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 15,
    "id": "7b19daed-5094-4965-878a-fc3fbed2967e",
    "metadata": {
     "tags": []
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 16,
    "id": "3ccf3ca0-60b6-47ce-808f-fe0f1f97e2fe",
    "metadata": {
     "tags": []
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 17,
    "id": "e2ddf320-13a6-4505-ba0b-b68761078547",
    "metadata": {
     "tags": []
@@ -287,7 +287,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 18,
+   "id": "e5015619-eeba-42fb-9a2e-cdce40bb8cec",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "value_filter = \"all\"\n",
+    "number_filter  = 0\n",
+    "subtype = \"all\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "id": "0339f460-0e1f-46eb-a6bf-bb05e56a4524",
    "metadata": {
     "tags": []
@@ -334,9 +346,9 @@
     "    for value in values_list:\n",
     "        item[\"name\"] = number_worker_keys[number_worker]\n",
     "        count = len(data[data[value]>=number_worker])\n",
-    "        item[value] = int(count/3)\n",
+    "        item[value] = int(count)\n",
     "    cumulative_results.append(item)\n",
-    "\n",
+    "    \n",
     "topic_count = data[\"topic\"].value_counts()\n",
     "topic_count = topic_count.reset_index()\n",
     "topic_count.columns = [\"name\", \"value\"]\n",
@@ -355,20 +367,20 @@
     "answer_list[\"percent\"] = round(answer_list[\"value\"]/answer_list[\"value\"].sum()*100, 2)\n",
     "answer_list = answer_list.to_dict(\"records\")\n",
     "\n",
-    "nest_data = data.groupby(['firstword', 'secondword', 'thirdword', 'fourword'])['fifword'].value_counts()\n",
+    "nest_data = data.groupby(['first_word', 'secondword', 'thirdword', 'fourword'])['fifword'].value_counts()\n",
     "result = nest_pie_data(nest_data)\n",
     "result = add_color(result)\n",
     "\n",
-    "first_word = data[\"firstword\"].value_counts()\n",
+    "first_word = data[\"first_word\"].value_counts()\n",
     "first_word = first_word.reset_index()\n",
     "first_word.columns = [\"name\", \"value\"]\n",
     "first_word[\"percent\"] = round(first_word[\"value\"]/len(data)*100, 2)\n",
     "\n",
-    "qa_result = stack_bar_chart(data, 'firstword', \"answer\")\n",
+    "qa_result = stack_bar_chart(data, 'first_word', \"answer\")\n",
     "QAkeys = list(qa_result[0].keys())\n",
     "QAkeys.remove(\"name\")\n",
     "\n",
-    "qt_result = stack_bar_chart(data, 'firstword', \"topic\")\n",
+    "qt_result = stack_bar_chart(data, 'first_word', \"topic\")\n",
     "QTkeys = list(qt_result[0].keys())\n",
     "QTkeys.remove(\"name\")\n",
     "\n",
@@ -396,33 +408,14 @@
     "question_bag = bag_of_word(list(data['question']))\n",
     "answer_bag = bag_of_word(list(data['answer']))\n",
     "question_answer_bag = bag_of_word(list(data['question']) + list(data['answer']))\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 69,
-   "id": "2822924d-69b9-4167-8103-3ee163c89a10",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "\n",
     "worker_mapping = {\n",
     "    0: \"0 worker\",\n",
     "    1: \"1 worker\",\n",
     "    2: \"2 workers\",\n",
     "    3: \"3 workers\"\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 72,
-   "id": "29e19264-f9e1-42ea-9285-a7c1527b04b9",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
+    "}\n",
+    "\n",
     "category_workers = []\n",
     "for category in categories:\n",
     "    item = data[category].map(worker_mapping).value_counts().to_dict()\n",
@@ -432,47 +425,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 23,
    "id": "0a912831-613c-4b69-aa89-bf7e764e692f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'0 worker': 59822,\n",
-       "  '1 worker': 16430,\n",
-       "  '2 workers': 9644,\n",
-       "  '3 workers': 5447,\n",
-       "  'name': 'incorrect'},\n",
-       " {'0 worker': 85924,\n",
-       "  '1 worker': 5199,\n",
-       "  '2 workers': 219,\n",
-       "  '3 workers': 1,\n",
-       "  'name': 'partially incorrect'},\n",
-       " {'0 worker': 73531,\n",
-       "  '1 worker': 15721,\n",
-       "  '2 workers': 1966,\n",
-       "  '3 workers': 125,\n",
-       "  'name': 'ambiguous'},\n",
-       " {'0 worker': 63626,\n",
-       "  '1 worker': 22905,\n",
-       "  '2 workers': 4388,\n",
-       "  '3 workers': 424,\n",
-       "  'name': 'partially correct'},\n",
-       " {'3 workers': 31371,\n",
-       "  '2 workers': 25229,\n",
-       "  '1 worker': 18762,\n",
-       "  '0 worker': 15981,\n",
-       "  'name': 'correct'}]"
+       "0        0.17\n",
+       "1        1.00\n",
+       "2        0.25\n",
+       "3        0.92\n",
+       "4        0.33\n",
+       "         ... \n",
+       "91330    0.67\n",
+       "91331    0.33\n",
+       "91332    0.17\n",
+       "91333    0.83\n",
+       "91334    1.00\n",
+       "Name: overal_score, Length: 91335, dtype: float64"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "category_workers"
+    "data[\"overal_score\"]"
    ]
   },
   {
@@ -548,7 +528,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.15"
+   "version": "3.9.16"
   }
  },
  "nbformat": 4,
