--- a/api/analysis.ipynb
+++ b/api/analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 55,
    "id": "a3e4335d-86ea-4aaa-aac5-458c5dbd53bd",
    "metadata": {
     "tags": []
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 56,
    "id": "ba1ee108-3ace-470d-9288-fa6817052ac6",
    "metadata": {},
    "outputs": [],
@@ -28,35 +28,413 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 63,
    "id": "974ad26a-834c-4124-8dc6-5a358b178fdc",
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>question</th>\n",
+       "      <th>id</th>\n",
+       "      <th>first_word</th>\n",
+       "      <th>secondword</th>\n",
+       "      <th>img_path</th>\n",
+       "      <th>topic</th>\n",
+       "      <th>answer</th>\n",
+       "      <th>thirdword</th>\n",
+       "      <th>fourword</th>\n",
+       "      <th>len ques</th>\n",
+       "      <th>...</th>\n",
+       "      <th>correct</th>\n",
+       "      <th>incorrect</th>\n",
+       "      <th>partially correct</th>\n",
+       "      <th>partially incorrect</th>\n",
+       "      <th>incorrect &amp; partially incorrect</th>\n",
+       "      <th>correct &amp; partially correct</th>\n",
+       "      <th>answer_type</th>\n",
+       "      <th>sum</th>\n",
+       "      <th>judgements</th>\n",
+       "      <th>overal_score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>are all people sitting?</td>\n",
+       "      <td>77625</td>\n",
+       "      <td>are</td>\n",
+       "      <td>all</td>\n",
+       "      <td>S30/S30E21-14651.jpg</td>\n",
+       "      <td>reasoning</td>\n",
+       "      <td>no</td>\n",
+       "      <td>people</td>\n",
+       "      <td>sitting?</td>\n",
+       "      <td>4</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>yes/no</td>\n",
+       "      <td>3</td>\n",
+       "      <td>{\"worker_1\": 1, \"worker_2\": 0, \"worker_3\": 0.25}</td>\n",
+       "      <td>0.42</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34</th>\n",
+       "      <td>are all the people on the bus?</td>\n",
+       "      <td>862</td>\n",
+       "      <td>are</td>\n",
+       "      <td>all</td>\n",
+       "      <td>S28/S28E07-12601.jpg</td>\n",
+       "      <td>reasoning</td>\n",
+       "      <td>no</td>\n",
+       "      <td>the</td>\n",
+       "      <td>people</td>\n",
+       "      <td>7</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>yes/no</td>\n",
+       "      <td>3</td>\n",
+       "      <td>{\"worker_1\": 1, \"worker_2\": 1, \"worker_3\": 0.75}</td>\n",
+       "      <td>0.92</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>71</th>\n",
+       "      <td>are all the people wearing ties?</td>\n",
+       "      <td>58632</td>\n",
+       "      <td>are</td>\n",
+       "      <td>all</td>\n",
+       "      <td>S27/S27E10-00651.jpg</td>\n",
+       "      <td>reasoning</td>\n",
+       "      <td>no</td>\n",
+       "      <td>the</td>\n",
+       "      <td>people</td>\n",
+       "      <td>6</td>\n",
+       "      <td>...</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>yes/no</td>\n",
+       "      <td>3</td>\n",
+       "      <td>{\"worker_1\": 1, \"worker_2\": 1, \"worker_3\": 1}</td>\n",
+       "      <td>1.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>170</th>\n",
+       "      <td>are the cabinets empty?</td>\n",
+       "      <td>96190</td>\n",
+       "      <td>are</td>\n",
+       "      <td>the</td>\n",
+       "      <td>S32/S32E13-02851.jpg</td>\n",
+       "      <td>reasoning</td>\n",
+       "      <td>no</td>\n",
+       "      <td>cabinets</td>\n",
+       "      <td>empty?</td>\n",
+       "      <td>4</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>yes/no</td>\n",
+       "      <td>3</td>\n",
+       "      <td>{\"worker_1\": 1, \"worker_2\": 0, \"worker_3\": 0}</td>\n",
+       "      <td>0.33</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>186</th>\n",
+       "      <td>are the cartoons based on old cartoons?</td>\n",
+       "      <td>74676</td>\n",
+       "      <td>are</td>\n",
+       "      <td>the</td>\n",
+       "      <td>S30/S30E21-24401.jpg</td>\n",
+       "      <td>reasoning</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>cartoons</td>\n",
+       "      <td>based</td>\n",
+       "      <td>7</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>yes/no</td>\n",
+       "      <td>3</td>\n",
+       "      <td>{\"worker_1\": 0.75, \"worker_2\": 0.75, \"worker_3...</td>\n",
+       "      <td>0.75</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>104287</th>\n",
+       "      <td>what time of day is it?</td>\n",
+       "      <td>29437</td>\n",
+       "      <td>what</td>\n",
+       "      <td>time</td>\n",
+       "      <td>S26/S26E02-15301.jpg</td>\n",
+       "      <td>reasoning</td>\n",
+       "      <td>night</td>\n",
+       "      <td>of</td>\n",
+       "      <td>day</td>\n",
+       "      <td>6</td>\n",
+       "      <td>...</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>other</td>\n",
+       "      <td>3</td>\n",
+       "      <td>{\"worker_1\": 1, \"worker_2\": 1, \"worker_3\": 1}</td>\n",
+       "      <td>1.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>104288</th>\n",
+       "      <td>what time of day is it?</td>\n",
+       "      <td>30302</td>\n",
+       "      <td>what</td>\n",
+       "      <td>time</td>\n",
+       "      <td>S26/S26E06-21801.jpg</td>\n",
+       "      <td>reasoning</td>\n",
+       "      <td>night</td>\n",
+       "      <td>of</td>\n",
+       "      <td>day</td>\n",
+       "      <td>6</td>\n",
+       "      <td>...</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>other</td>\n",
+       "      <td>3</td>\n",
+       "      <td>{\"worker_1\": 1, \"worker_2\": 1, \"worker_3\": 1}</td>\n",
+       "      <td>1.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>104295</th>\n",
+       "      <td>what time of day is it?</td>\n",
+       "      <td>63765</td>\n",
+       "      <td>what</td>\n",
+       "      <td>time</td>\n",
+       "      <td>S27/S27E09-07051.jpg</td>\n",
+       "      <td>reasoning</td>\n",
+       "      <td>night</td>\n",
+       "      <td>of</td>\n",
+       "      <td>day</td>\n",
+       "      <td>6</td>\n",
+       "      <td>...</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>other</td>\n",
+       "      <td>3</td>\n",
+       "      <td>{\"worker_1\": 1, \"worker_2\": 1, \"worker_3\": 1}</td>\n",
+       "      <td>1.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>104303</th>\n",
+       "      <td>what time of the day is it?</td>\n",
+       "      <td>42452</td>\n",
+       "      <td>what</td>\n",
+       "      <td>time</td>\n",
+       "      <td>S25/S25E19-01851.jpg</td>\n",
+       "      <td>reasoning</td>\n",
+       "      <td>night</td>\n",
+       "      <td>of</td>\n",
+       "      <td>the</td>\n",
+       "      <td>7</td>\n",
+       "      <td>...</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>other</td>\n",
+       "      <td>3</td>\n",
+       "      <td>{\"worker_1\": 1, \"worker_2\": 1, \"worker_3\": 1}</td>\n",
+       "      <td>1.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>104363</th>\n",
+       "      <td>where are the people in relation to the firepl...</td>\n",
+       "      <td>42326</td>\n",
+       "      <td>where</td>\n",
+       "      <td>are</td>\n",
+       "      <td>S25/S25E08-04251.jpg</td>\n",
+       "      <td>reasoning</td>\n",
+       "      <td>right</td>\n",
+       "      <td>the</td>\n",
+       "      <td>people</td>\n",
+       "      <td>9</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>other</td>\n",
+       "      <td>3</td>\n",
+       "      <td>{\"worker_1\": 0.5, \"worker_2\": 1, \"worker_3\": 0}</td>\n",
+       "      <td>0.50</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>592 rows × 22 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "img_path\n",
-       "S28/S28E17-16851.jpg    11\n",
-       "S29/S29E15-06401.jpg    10\n",
-       "S27/S27E07-03751.jpg    10\n",
-       "S30/S30E08-16051.jpg    10\n",
-       "S28/S28E03-18901.jpg    10\n",
-       "                        ..\n",
-       "S33/S33E14-06651.jpg     1\n",
-       "S33/S33E14-06501.jpg     1\n",
-       "S33/S33E03-03401.jpg     1\n",
-       "S33/S33E10-07501.jpg     1\n",
-       "S27/S27E11-02001.jpg     1\n",
-       "Name: count, Length: 23277, dtype: int64"
+       "                                                 question     id first_word  \\\n",
+       "5                                 are all people sitting?  77625        are   \n",
+       "34                         are all the people on the bus?    862        are   \n",
+       "71                       are all the people wearing ties?  58632        are   \n",
+       "170                               are the cabinets empty?  96190        are   \n",
+       "186               are the cartoons based on old cartoons?  74676        are   \n",
+       "...                                                   ...    ...        ...   \n",
+       "104287                            what time of day is it?  29437       what   \n",
+       "104288                            what time of day is it?  30302       what   \n",
+       "104295                            what time of day is it?  63765       what   \n",
+       "104303                        what time of the day is it?  42452       what   \n",
+       "104363  where are the people in relation to the firepl...  42326      where   \n",
+       "\n",
+       "       secondword              img_path      topic answer thirdword  fourword  \\\n",
+       "5             all  S30/S30E21-14651.jpg  reasoning     no    people  sitting?   \n",
+       "34            all  S28/S28E07-12601.jpg  reasoning     no       the    people   \n",
+       "71            all  S27/S27E10-00651.jpg  reasoning     no       the    people   \n",
+       "170           the  S32/S32E13-02851.jpg  reasoning     no  cabinets    empty?   \n",
+       "186           the  S30/S30E21-24401.jpg  reasoning    yes  cartoons     based   \n",
+       "...           ...                   ...        ...    ...       ...       ...   \n",
+       "104287       time  S26/S26E02-15301.jpg  reasoning  night        of       day   \n",
+       "104288       time  S26/S26E06-21801.jpg  reasoning  night        of       day   \n",
+       "104295       time  S27/S27E09-07051.jpg  reasoning  night        of       day   \n",
+       "104303       time  S25/S25E19-01851.jpg  reasoning  night        of       the   \n",
+       "104363        are  S25/S25E08-04251.jpg  reasoning  right       the    people   \n",
+       "\n",
+       "        len ques  ... correct  incorrect  partially correct  \\\n",
+       "5              4  ...       1          1                  0   \n",
+       "34             7  ...       2          0                  1   \n",
+       "71             6  ...       3          0                  0   \n",
+       "170            4  ...       1          2                  0   \n",
+       "186            7  ...       0          0                  3   \n",
+       "...          ...  ...     ...        ...                ...   \n",
+       "104287         6  ...       3          0                  0   \n",
+       "104288         6  ...       3          0                  0   \n",
+       "104295         6  ...       3          0                  0   \n",
+       "104303         7  ...       3          0                  0   \n",
+       "104363         9  ...       1          1                  0   \n",
+       "\n",
+       "        partially incorrect  incorrect & partially incorrect  \\\n",
+       "5                         1                                2   \n",
+       "34                        0                                0   \n",
+       "71                        0                                0   \n",
+       "170                       0                                2   \n",
+       "186                       0                                0   \n",
+       "...                     ...                              ...   \n",
+       "104287                    0                                0   \n",
+       "104288                    0                                0   \n",
+       "104295                    0                                0   \n",
+       "104303                    0                                0   \n",
+       "104363                    0                                1   \n",
+       "\n",
+       "        correct & partially correct  answer_type  sum  \\\n",
+       "5                                 1       yes/no    3   \n",
+       "34                                3       yes/no    3   \n",
+       "71                                3       yes/no    3   \n",
+       "170                               1       yes/no    3   \n",
+       "186                               3       yes/no    3   \n",
+       "...                             ...          ...  ...   \n",
+       "104287                            3        other    3   \n",
+       "104288                            3        other    3   \n",
+       "104295                            3        other    3   \n",
+       "104303                            3        other    3   \n",
+       "104363                            1        other    3   \n",
+       "\n",
+       "                                               judgements  overal_score  \n",
+       "5        {\"worker_1\": 1, \"worker_2\": 0, \"worker_3\": 0.25}          0.42  \n",
+       "34       {\"worker_1\": 1, \"worker_2\": 1, \"worker_3\": 0.75}          0.92  \n",
+       "71          {\"worker_1\": 1, \"worker_2\": 1, \"worker_3\": 1}          1.00  \n",
+       "170         {\"worker_1\": 1, \"worker_2\": 0, \"worker_3\": 0}          0.33  \n",
+       "186     {\"worker_1\": 0.75, \"worker_2\": 0.75, \"worker_3...          0.75  \n",
+       "...                                                   ...           ...  \n",
+       "104287      {\"worker_1\": 1, \"worker_2\": 1, \"worker_3\": 1}          1.00  \n",
+       "104288      {\"worker_1\": 1, \"worker_2\": 1, \"worker_3\": 1}          1.00  \n",
+       "104295      {\"worker_1\": 1, \"worker_2\": 1, \"worker_3\": 1}          1.00  \n",
+       "104303      {\"worker_1\": 1, \"worker_2\": 1, \"worker_3\": 1}          1.00  \n",
+       "104363    {\"worker_1\": 0.5, \"worker_2\": 1, \"worker_3\": 0}          0.50  \n",
+       "\n",
+       "[592 rows x 22 columns]"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "all[\"img_path\"].value_counts()"
+    "all[all[\"topic\"] == \"reasoning\"]"
    ]
   },
   {
